--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,10 +1,32 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <title>{% if page.seo_title %}{{ page.seo_title }}{% else %}{{ page.title }}{% endif %}</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{% if page.seo_description %}{{ page.seo_description }}{% else %}{{ site.description }}{% endif %}">
+
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-    <script type="text/javascript" src="{{ site.baseurl }}/assets/modernizer/modernizr.js"></script>
+
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/style.css">
+
+    <!-- Google webmaster tools -->
+    <meta name="google-site-verification" content="t7AkgyFSXBSI2N-zw5keulhoL8nT-e23ifCihNlJZEU" />
+    <!-- / Google analytics -->
+
+    <!-- Open graph data -->
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="{% if page.seo_title %}{{ page.seo_title }}{% else %}{{ page.title }}{% endif %}" />
+    <meta property="og:description" content="{% if page.seo_description %}{{ page.seo_description }}{% else %}{{ site.description }}{% endif %}" />
+    <meta property="og:url" content="{{ site.baseurl }}" />
+    <meta property="og:site_name" content="Sanus artificium" />
+    <meta property="og:image" content="{{ site.baseurl }}/images/logo.png" />
+    <!-- / Open graph data -->
+
+
 </head>
+
+<!--[if lt IE 7]>
+<p style="text-align: center;">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+<![endif]-->
