--- a/_includes/side.html
+++ b/_includes/side.html
@@ -11,7 +11,7 @@
     <a class="hint--right  hint--success  hint--rounded" data-hint="GitHub page" target="_blank" href="https://github.com/sanusart"><i class="fa fa-github"></i></a>
     <a class="hint--right  hint--success  hint--rounded" data-hint="Follow @sanusart on Twitter" target="_blank" href="https://twitter.com/intent/follow?original_referer=https://sanusart.com&screen_name=sanusart&tw_p=followbutton"><i class="fa fa-twitter"></i></a>
     <a class="hint--right  hint--success  hint--rounded" data-hint="Facebook page" target="_blank" href="https://facebook.com/sanusart"><i class="fa fa-facebook-square"></i></a>
-    <a class="hint--right  hint--success  hint--rounded" data-hint="G+" target="_blank" href="https://plus.google.com/111862979601357461785"><i class="fa fa-google"></i></a>
+    <a class="hint--right  hint--success  hint--rounded" data-hint="G+" target="_blank" href="https://plus.google.com/111862979601357461785"><i class="fa fa-google-plus-square"></i></a>
     <a class="hint--right  hint--success  hint--rounded" data-hint="LinkedIn" target="_blank" href="https://www.linkedin.com/in/sanusart"><i class="fa fa-linkedin-square"></i></a>
     <a class="hint--right  hint--success  hint--rounded" data-hint="RSS" target="_blank" href="{{site.baseurl}}/feed.xml"><i class="fa fa-rss"></i></a>
     <a class="hint--right  hint--success  hint--rounded totop" data-hint="To the top ^" href="#sanusart"><i class="fa fa-angle-up"></i></a>
